fixed horizontal overflow

--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -1,7 +1,7 @@
 @use "../../scss/variables.scss";
 
 .hero-section {
-  width: 100vw;
+  width: 100%;
   margin-top: 0;
 }
 
